--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.8",
     "express": "^4.18.2",
+    "json-server": "^1.0.0-beta.3",
+    "ngx-mask": "^19.0.6",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.8",
